--- a/Proyecto2_BDA/Proyecto2_BDA_Presentacion/pom.xml
+++ b/Proyecto2_BDA/Proyecto2_BDA_Presentacion/pom.xml
@@ -8,6 +8,13 @@
     </parent>
     <artifactId>Proyecto2_BDA_Presentacion</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE250</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.proyecto2_bda_presentacion.Proyecto2_BDA_Presentacion</exec.mainClass>
