--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Proyecto2_BDA/Proyecto2BDA_Dominio/target/
 /Proyecto2_BDA/Proyecto2_BDA_Persistencia/nbproject/
 /Proyecto2_BDA/Proyecto2_BDA_DTOs/target/
+/Proyecto2_BDA/Proyecto2_BDA_Persistencia/target/
