--- a/Proyecto2_BDA/Proyecto2_BDA_Negocio/pom.xml
+++ b/Proyecto2_BDA/Proyecto2_BDA_Negocio/pom.xml
@@ -8,6 +8,13 @@
     </parent>
     <artifactId>Proyecto2_BDA_Negocio</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Proyecto2_BDA_DTOs</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.proyecto2_bda_negocio.Proyecto2_BDA_Negocio</exec.mainClass>
