--- a/Proyecto2_BDA/CasoAdministrador/pom.xml
+++ b/Proyecto2_BDA/CasoAdministrador/pom.xml
@@ -6,22 +6,22 @@
         <artifactId>Proyecto2_BDA</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>Proyecto2_BDA_Presentacion</artifactId>
+    <artifactId>CasoAdministrador</artifactId>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.netbeans.external</groupId>
-            <artifactId>AbsoluteLayout</artifactId>
-            <version>RELEASE250</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Proyecto2_BDA_DTOs</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>CasoAdministrador</artifactId>
+            <artifactId>Proyecto2_BDA_Negocio</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
-        <exec.mainClass>com.mycompany.proyecto2_bda_presentacion.Proyecto2_BDA_Presentacion</exec.mainClass>
+        <exec.mainClass>com.mycompany.casoadministrador.CasoAdministrador</exec.mainClass>
     </properties>
 </project>
