reporte centro computo
tiene columnas y filas vacías porque le faltan cosas a los laboratorios y computadoras

--- a/Proyecto2_BDA/Proyecto2_BDA_Negocio/pom.xml
+++ b/Proyecto2_BDA/Proyecto2_BDA_Negocio/pom.xml
@@ -19,6 +19,18 @@
             <artifactId>Proyecto2_BDA_Persistencia</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>9.2.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>9.2.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
