--- a/Proyecto2_BDA/Proyecto2_BDA_Presentacion/pom.xml
+++ b/Proyecto2_BDA/Proyecto2_BDA_Presentacion/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>CasoAdministrador</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Proyecto2_BDA_Negocio</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
